--- a/J3DModelViewer/J3DModelViewer.csproj
+++ b/J3DModelViewer/J3DModelViewer.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Framework\Input.cs" />
     <Compile Include="ViewModel\HighresScreenshotViewModel.cs" />
     <Compile Include="ViewModel\ModelRenderOptionsViewModel.cs" />
+    <Compile Include="ViewModel\SceneGraphViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
