Add a custom converter for VertexFormat to allow us to show both the Color or the Data type instead of it throwing exceptions when trying to force cast to only one type. Conditionally shows up based on the actual vertex component type. Added a scrollviewer to the Info tab.

--- a/J3DModelViewer/J3DModelViewer.csproj
+++ b/J3DModelViewer/J3DModelViewer.csproj
@@ -128,6 +128,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\VertexFormatDataTypeConverter.cs" />
     <Compile Include="Framework\FrameBuffer.cs" />
     <Compile Include="Framework\LineBatcher.cs" />
     <Compile Include="Framework\RelayCommand.cs" />
