--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "JStudio"]
 	path = JStudio
 	url = https://github.com/LordNed/JStudio.git
+[submodule "WCommon"]
+	path = WCommon
+	url = https://github.com/LordNed/WCommon.git
