Moved the Info Tab off into its own UserControl.

--- a/J3DModelViewer/J3DModelViewer.csproj
+++ b/J3DModelViewer/J3DModelViewer.csproj
@@ -130,9 +130,16 @@
     <Compile Include="Framework\LineBatcher.cs" />
     <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Framework\ScreenspaceQuad.cs" />
+    <Compile Include="View\InfoTab.xaml.cs">
+      <DependentUpon>InfoTab.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PreviewTab.xaml.cs">
       <DependentUpon>PreviewTab.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\InfoTab.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
