--- a/J3DModelViewer/J3DModelViewer.csproj
+++ b/J3DModelViewer/J3DModelViewer.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Framework\LineBatcher.cs" />
     <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Framework\ScreenspaceQuad.cs" />
+    <Compile Include="ViewModel\MaterialEditorViewModel.cs" />
     <Compile Include="View\InfoTab.xaml.cs">
       <DependentUpon>InfoTab.xaml</DependentUpon>
     </Compile>
