--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "WCommon"]
 	path = WCommon
 	url = https://github.com/LordNed/WCommon.git
+[submodule "WArchiveTools"]
+	path = WArchiveTools
+	url = https://github.com/LordNed/WArchive-Tools.git
+	branch = ISO_Opening_Experiments
