Added the ability to disable the animated light from animating in the viewport.

--- a/J3DModelViewer/App.config
+++ b/J3DModelViewer/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="J3DModelViewer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="J3DRenderer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,32 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <userSettings>
+        <J3DModelViewer.Properties.Settings>
+            <setting name="ShowPivot" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowGrid" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ShowBoundingBox" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowBoundingSphere" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowBones" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowBoneBoundingBox" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowBoneBoundingSphere" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AnimateLight" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </J3DModelViewer.Properties.Settings>
         <J3DRenderer.Properties.Settings>
             <setting name="ShowPivot" serializeAs="String">
                 <value>False</value>
