Adds a depth pre-pass option (View menu) for translucent models. Breaks most non-translucent models so it's set to false by default.

--- a/J3DModelViewer/App.config
+++ b/J3DModelViewer/App.config
@@ -35,6 +35,9 @@
             <setting name="AnimateLight" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DepthPrePass" serializeAs="String">
+                <value>False</value>
+            </setting>
         </J3DModelViewer.Properties.Settings>
         <J3DRenderer.Properties.Settings>
             <setting name="ShowPivot" serializeAs="String">
