--- a/J3DModelViewer/Properties/Settings.settings
+++ b/J3DModelViewer/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="AnimateLight" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DepthPrePass" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
